--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ds-bot",
   "version": "1.0.0",
-  "description": "## 概要",
+  "description": "bot framework for gitter",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
