--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/dotstudio/botstudio#readme",
   "dependencies": {
+    "cron": "^1.1.0",
     "node-gitter": "^1.2.11",
     "request": "^2.74.0"
   }
